<?xml version="1.0" encoding="utf-8"?>

<!--

    These preferences belong to the ROM Info Section.
    Edit this file to manage your info.

-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="app_build_number"
        android:persistent="false"
        android:title="@string/app_version"/>

    <Preference
        android:key="rom_build_number"
        android:persistent="false"
        android:title="@string/rom_version"
        android:summary="@string/rom_build_number"/>

    <Preference
        android:key="rom_developer"
        android:persistent="false"
        android:title="@string/rom_developer_title"
        android:summary="@string/rom_developer_summary"/>

    <Preference
        android:key="rom_themer"
        android:persistent="false"
        android:title="@string/rom_themer_title"
        android:summary="@string/rom_themer_summary"/>

    <Preference
        android:key="rom_thread"
        android:persistent="false"
        android:title="@string/project_thread_title"
        android:summary="@string/rom_thread_summary"/>

    <Preference
        android:key="rom_github"
        android:persistent="false"
        android:title="@string/project_github_title"
        android:summary="@string/rom_github_summary"/>

    <Preference
        android:key="review_app"
        android:persistent="false"
        android:title="@string/review_app_title"
        android:summary="@string/review_app_summary"/>

</PreferenceScreen>